[project]
name = "all"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "camoufox>=0.4.11",
    "grequests>=0.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "polars>=1.38.1",
    "pyqt6>=6.11.0",
    "requests>=2.32.5",
    "scikit-learn>=1.9.0",
    "seleniumbase>=4.47.3",
    "sympy>=1.14.0",
]
